when creating a database via cloning a repo, close a possibly open db